--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.65 '???' ??? ??, 2002
 -------------------------------------------------------------------------------
 
+08.03.02 VZ: added "Preview" menu command to the composer
 04.03.02 VZ: added possibility to set the message headers from templates
 04.03.02 VZ: added $signature template macro
 22.02.02 VZ: smarter "To" setting when replying to a message from oneself
