--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.65 '???' ??? ??, 2002
 -------------------------------------------------------------------------------
 
+11.03.02 VZ: many fixes to persistent message box handling
 08.03.02 VZ: added "Preview" menu command to the composer
 04.03.02 VZ: added possibility to set the message headers from templates
 04.03.02 VZ: added $signature template macro
