--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.65 '???' ??? ??, 2002
 -------------------------------------------------------------------------------
 
+12.04.02 VZ: updated the composer layout to be more simply to use
 29.03.02 VZ: added command line options to open the composer immediately
 28.03.02 VZ: save unsaved messages when on crash or interrupt
 18.03.02 VZ: added "home folder" option to the folder tree
